Update Miata post

--- a/src/pages/blog/2021-07-20-zoom-zoom.md
+++ b/src/pages/blog/2021-07-20-zoom-zoom.md
@@ -9,10 +9,20 @@ tags:
   - cars
 ---
 
-Ever since selling off my 240SX, I've been itching to get my hands on a new project car. I stumbled across this 2004 Mazdaspeed Miata while browsing FB Marketplace. The details seemed intriguing; one owner, 72k miles, bone stock. 
+Ever since selling off my 240SX, I've been itching to get my hands on a new project car. I stumbled across this 2004 Mazdaspeed Miata while browsing FB Marketplace. The details seemed intriguing; one owner, 72k miles, bone stock. The real draw was that little [Mazdaspeed](https://en.wikipedia.org/wiki/Mazda_MX-5_(NB)#Mazdaspeed_MX-5_(2004%E2%80%932005)) badge. The Mazdaspeed Miata remains the only Miata to receive a factory turbocharger. With the help of the turbo, the `BP-4W` produced `178hp` at `6000` rpm and `167 lbf-ft` of torque at `4500` rpm, leading to a `0-60` mph speed of `6.7` seconds. Additional Mazdaspeed upgrades included:
 
-I contacted the owner (who happened to be a soon to be retired 69 year old woman) and setup a time to checkout the car. After arriving at our meeting place, I saw the bright red Miata parked in the corner of the parking lot. After a twenty minute test drive I was ready to make a deal! Mechanically, the car is great. Transmission shifts like all Miata's I've ever driven: beautiful! The main flaws are almost entirely cosmetic. The exterior needs some love, which I'm happy to provide.
+* Upgraded six-speed transmission and clutch assembly
+* Bilstein shock absorbers
+* 17" Racing Hart wheels, fitted with larger tires
+* Mazdaspeed front and rear strut bars
+* Mazdaspeed interior trim
+* Custom paint options
+
+Mazda only produced around 6000 total units for the US market during model years 2004 and 2005. 
+
+I contacted the owner (who happened to be a soon to be retired 69 year old woman) and setup a time to checkout the car. After arriving at our meeting place, I saw the bright red Miata parked in the corner of the parking lot. After a twenty minute test drive I was ready to make a deal! Mechanically, the car is great. Transmission shifts like all Miata's I've ever driven: beautiful! The main flaws are almost entirely cosmetic. The interior and exterior need some love, which I'm happy to provide 😁
 
 ![2004 Mazdaspeed Miata](/img/miata/miata.JPG "2004 Mazdaspeed Miata")
+
 
 I'll be posting updates periodically, so stay tuned!
